правки в области зданий

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <canvas id="game" aria-label="Pixel city builder"></canvas>
         <div id="hud">
           <button id="start-btn" type="button">Start City</button>
-          <div id="tip">WASD/Arrows: move | Scroll: zoom | Shift+drag: pan | 1-9: tools | U: upgrade | R: repair | B: bulldoze | M: mute</div>
+          <div id="tip">WASD/Arrows: move | Scroll: zoom | Shift+drag: pan | 1-9: tools | U: upgrade | R: repair | B: bulldoze | G: selected range | M: mute</div>
         </div>
       </div>
 
@@ -62,6 +62,7 @@
         <button id="bulldoze-btn" type="button">Bulldoze (B)</button>
         <div class="divider"></div>
         <button id="mute-btn" type="button">Mute</button>
+        <button id="ranges-btn" type="button">Show Selected Range (G)</button>
 
         <div class="divider"></div>
         <h2>Minimap</h2>
